# honey_engine

./: .gitignore  honey_engine.code-workspace
docs/: doc.md  doc.xlsx  (+2 more)
honey_engine/: CMakeLists.txt  honey_engine.code-workspace
honey_engine/UT/: CMakeLists.txt
honey_engine/UT/ut_main/: CMakeLists.txt  ut_main.cpp
honey_engine/src/: CMakeLists.txt
honey_engine/src/common/: CMakeLists.txt
honey_engine/src/common/logger/: CMakeLists.txt
honey_engine/src/common/logger/log_stream/: CMakeLists.txt
honey_engine/src/common/logger/log_stream/include/log_stream/: LogBuffer.hpp  LogSeverity.hpp  LogStream.hpp
honey_engine/src/common/logger/log_stream/src/: LogStream.cpp
honey_engine/src/common/logger/logger/: CMakeLists.txt
honey_engine/src/common/utils/include/utils/: TimeScheduler.hpp  WorkerThread.hpp
honey_engine/src/common/utils/src/: Chronometer.cpp  TimeScheduler.cpp  WorkerThread.cpp
honey_engine/src/common/utils/tests/ut/: CMakeLists.txt
honey_engine/src/engine/: CMakeLists.txt
honey_engine/src/engine/common/: CMakeLists.txt
honey_engine/src/engine/common/exception/: CMakeLists.txt
honey_engine/src/engine/common/logger/log_stream/: CMakeLists.txt
honey_engine/src/engine/common/logger/logger/: CMakeLists.txt
honey_engine/src/engine/common/math/: CMakeLists.txt
honey_engine/src/engine/common/utils/: CMakeLists.txt
honey_engine/src/engine/common/utils/src/: Chronometer.cpp
honey_engine/src/engine/gfx/: CMakeLists.txt
honey_engine/src/engine/gfx/exception/: CMakeLists.txt
honey_engine/src/engine/gfx/geometry/: CMakeLists.txt
honey_engine/src/engine/gfx/geometry/src/: Cross.cpp  Hexagon.cpp  Transform.cpp
honey_engine/src/engine/gfx/gfx/: CMakeLists.txt
honey_engine/src/engine/gfx/gfx/include/: Color.hpp  Vertex.hpp  VertexArray.hpp
honey_engine/src/engine/gfx/gfx/src/: Font.cpp  Image.cpp  Page.cpp  Texture.cpp
honey_engine/src/engine/gfx/include/gfx/: Color.hpp  ColorBasic.hpp  Vertex.hpp
honey_engine/src/engine/gfx/render/gl_wrapper/: CMakeLists.txt
honey_engine/src/engine/gfx/render/sfml2/: CMakeLists.txt
honey_engine/src/engine/gfx/src/: VertexArray2d.cpp
honey_engine/src/engine/gfx/src/draw/: AdvButton.cpp  Button.cpp  IShape.cpp  Shape.cpp  ShapeRectangle.cpp  Sprite.cpp  Text.cpp
honey_engine/src/engine/gfx/src/graphic/: Image.cpp  Texture.cpp
honey_engine/src/engine/gfx/src/render/: BaseLayer.cpp  Button.cpp  CopyPropagationLayer.cpp  Layer.cpp  MenuLayer.cpp  Render.cpp  Scene.cpp  SceneManager.cpp  UniquePropagationLayer.cpp
honey_engine/src/engine/gfx/src/text/: Font.cpp  FontHandles.cpp  FreeType2Wrapper.cpp  Page.cpp
honey_engine/src/engine/gfx/tests/: CMakeLists.txt
honey_engine/src/engine/gfx/tests/mocks/: CMakeLists.txt
honey_engine/src/engine/gfx/tests/sct/: ButtonSCT.cpp  CMakeLists.txt  InteractiveSCT.cpp  MenuLayerSCT.cpp  Model3dSCT.cpp  PropagationLayerSCT.cpp  RenderFixture.hpp  RenderSCT.cpp  ShapeSCT.cpp  TextSCT.cpp
honey_engine/src/engine/gfx/tests/ut/: AdvButtonTests.cpp  ButtonTests.cpp  CMakeLists.txt  FiguresTests.cpp  FontTests.cpp  ImageTests.cpp  LayerTests.cpp  MenuLayerTests.cpp  PageTests.cpp  SceneManagerTests.cpp  SceneTests.cpp  ShapeTests.cpp  SpriteTests.cpp  TextFixture.hpp  TextTests.cpp  TextureTests.cpp  Transformable2dTests.cpp  TransformableTests.cpp  UniquePropagationLayerTests.cpp
honey_engine/src/engine/libs/: CMakeLists.txt
honey_engine/src/engine/libs/src/: GlWrapper.cpp  GlfwWrapper.cpp  Shader.cpp  glad.c  stb_image.cpp
honey_engine/src/engine/libs/tests/mocks/: CMakeLists.txt
honey_engine/src/engine/sys/: CMakeLists.txt
honey_engine/src/engine/sys/include/sys/: ImageLoader.hpp  honey_engine.h
honey_engine/src/engine/sys/src/: ImageLoader.cpp
honey_engine/src/engine/window/: CMakeLists.txt
honey_engine/src/engine/window/include/: Source.hpp
honey_engine/src/engine/window/include/window/: Event.hpp  Keyboard.hpp  Mouse.hpp  Window.hpp
honey_engine/src/engine/window/src/: Window.cpp  WindowProcessInput.cpp
honey_engine/src/engine/window/src/events/: EventManager.cpp
honey_engine/src/engine/window/src/window/: FrameGuard.cpp  Window.cpp  WindowProcessEvent.cpp
honey_engine/src/engine/window/tests/: CMakeLists.txt
honey_engine/src/engine/window/tests/mocks/: CMakeLists.txt
honey_engine/src/engine/window/tests/ut/: CMakeLists.txt  EventManagerTests.cpp  WindowTests.cpp
honey_engine/src/gfx/: CMakeLists.txt
honey_engine/src/gfx/geometry/: CMakeLists.txt
honey_engine/src/gfx/geometry/include/geometry/: Point2d.hpp  Point3d.hpp  Utils.hpp  Vector4d.hpp
honey_engine/src/gfx/geometry/src/: Cross.cpp  Hexagon.cpp  Polygon.cpp  Rectangle.cpp  StretchedHexagon.cpp  Transformable2d.cpp  Utils.cpp
honey_engine/src/gfx/geometry/tests/ut/: CMakeLists.txt  FiguresTests.cpp  Transformable2dTests.cpp
honey_engine/src/gfx/gfx/: CMakeLists.txt
honey_engine/src/gfx/gfx/include/: Color.inl  ColorBasic.hpp  ColorBasic.inl  VertexArray2d.hpp
honey_engine/src/gfx/gfx/include/graphics/: Image.hpp  Texture.hpp
honey_engine/src/gfx/gfx/include/text/: Glyph.hpp
honey_engine/src/gfx/gfx/src/: VertexArray2d.cpp
honey_engine/src/gfx/math/: CMakeLists.txt
honey_engine/src/gfx/math/include/math/: Constants.hpp  Functions.hpp
honey_engine/src/gfx/opengl/: CMakeLists.txt
honey_engine/src/gfx/opengl/gl_wrapper/: CMakeLists.txt
honey_engine/src/gfx/opengl/gl_wrapper/src/: RenderWrapper.cpp  Window.cpp  WindowProcessInput.cpp
honey_engine/src/gfx/opengl/glad/: CMakeLists.txt
honey_engine/src/gfx/render/: CMakeLists.txt
honey_engine/src/gfx/render/gl_wrapper/: CMakeLists.txt
honey_engine/src/gfx/render/gl_wrapper/src/: GlResource.cpp
honey_engine/src/gfx/stb/: CMakeLists.txt
honey_engine/src/main/: CMakeLists.txt
honey_engine/src/main/src/: Main.cpp
honey_engine/src/program/: CMakeLists.txt
honey_engine/src/program/program/: CMakeLists.txt
honey_engine/src/program/program/include/: Program.hpp
honey_engine/src/program/program/src/: MainProgram.cpp  TestProgram.cpp
honey_engine/src/program/test/: CMakeLists.txt
(+173 files in other folders)
